完成数据库表拆分后的代码适配和文档更新
主要变更：
- MediaController：修复列表接口子表关联查询，使用外键 media_id 替代主键查询
- MediaFileVO：调整字段注释，明确仅包含状态不含大文本内容
- useMedia.js：优化 SSE 连接管理和侧边栏状态同步逻辑
- ChunkUploadService：完善 MD5 去重逻辑，检查子表数据完整性
- DATABASE_TABLE_SPLIT_PLAN.md：补充实施记录和遗留问题分析
- .gitignore：新增 IDEAoutput.txt 日志文件忽略规则

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>